# CaeReflex

./: .gitignore  CHANGELOG.md  CITATION.cff  COMMERCIAL_LICENSE.md  LICENSE.md  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml
caereflex/: contracts.py  exporters.py  plugins.py  services.py
docs/: ADAPTERS.md  ADAPTER_PLUGIN_CONTRACT.md  AGENT_INTEGRATION.md  CLI.md  CLI_FOUNDATION.md  CROSSREF.md  DEVELOPER_GUIDE.md  GATES_1_3_FOUNDATION.md  GATE_4_DIMENSIONS_UNITS.md  GATE_5A_SAFE_EXECUTION_RUNTIME.md  GATE_5B_OPENFOAM_NATIVE.md  GATE_5_FREEZE.md  GATE_6A_SPATIAL_CONTRACTS.md  GATE_6B_BACKEND_MAPPING.md  GATE_6B_BACKEND_TO_GRAPH_MAPPING.md  GATE_6C_SPATIAL_QUERIES_FREEZE.md  GATE_7_PHYSICS_RULES.md  GATE_8_LIFECYCLE.md  REFLEXCASE_SCHEMA.md  REST_API.md
examples/: README.md
openapi/: openapi.json  openapi.yaml
site/: index.html
tests/: test_cli.py  test_gate123_integration.py  test_gate1_contracts.py  test_gate1_plugins.py  test_gate2_cli.py  test_gate3_discovery.py  test_gate4_cli.py  test_gate4_openfoam_semantics.py  test_gate4_units.py  test_gate5_freeze_compatibility.py  test_gate5_malformed_inputs.py  test_gate5a_array_integrity_extra.py  test_gate5a_artifacts_arrays.py  test_gate5a_cli.py  test_gate5a_execution.py  test_gate5a_openapi_release.py  test_gate5a_plan_and_ledger.py  test_gate5a_release_and_single_file.py  test_gate5b_openfoam_failure_modes.py  test_gate5b_openfoam_native.py  test_gate5b_openfoam_parser.py  test_gate5c_gmsh_native.py  test_gate5c_gmsh_optional_api.py  test_gate5c_gmsh_optional_meshio.py  test_gate5c_gmsh_safety.py  test_gate5d_vtk_native.py  test_gate5d_vtk_optional_meshio.py  test_gate5d_vtk_optional_pyvista.py  test_gate6a_spatial_contracts.py  test_gate6a_spatial_store.py  test_gate6b_backend_mapping.py  test_import.py  (+8 more)
(+149 files in other folders)
